# Roblox-Presence

./: .gitignore  CMakeLists.txt  README.md  Roblox-Presence.sln  Roblox-Presence.vcxproj  main.cpp  resource.aps  resource.rc
plugin/: DiscordPresence.lua
